adicionado templete show pessoa

--- a/reuniao/cadastro/templates/show_pessoa.html
+++ b/reuniao/cadastro/templates/show_pessoa.html
@@ -22,7 +22,7 @@
         <td>{{ indice.sobrenome }}</td>   
         <td>  
             <a href="/cadastro/edit-pessoa/{{ indice.id_pessoa }}"><span class="glyphicon glyphicon-pencil" >Editar</span></a>  
-            <a href="/cadastro/delete-pessoa/{{ indice.id_pessoa }}">Excuir</a>  
+            <a href="/cadastro/delete-pessoa/{{ indice.id_pessoa }}">Excluir</a>  
         </td>  
     </tr>  
 {% endfor %}  
