--- a/reuniao/cadastro/templates/show_espaco.html
+++ b/reuniao/cadastro/templates/show_espaco.html
@@ -31,5 +31,7 @@
 <br>  
 <br>  
 <center><a href="/cadastro/cadastro-espaco" class="btn btn-primary">Adicionar espaço</a></center>  
+<br><br>
+<center><a href="/" class="btn btn-primary">Voltar</a></center> 
 </body>  
 </html>  
