--- a/reuniao/cadastro/templates/show_pessoa.html
+++ b/reuniao/cadastro/templates/show_pessoa.html
@@ -31,5 +31,7 @@
 <br>  
 <br>  
 <center><a href="/cadastro/cadastro-pessoa" class="btn btn-primary">Adicionar pessoa</a></center>  
+<br><br>
+<center><a href="/" class="btn btn-primary">Voltar</a></center> 
 </body>  
 </html>  
